# Bzoof_ai

./: .dockerignore  .gitignore  AI_APPLICATION_STRATEGY.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  FINE_TUNING_STRATEGY.md  IMPROVEMENTS.md  PHASE3_TEST_PLAN.md  PHASE4_IMPLEMENTATION.md  PHASE5_DOCKER.md  PHASE7_FINE_TUNING.md  README.md  SKILL_AI_SPECIALIST.md  SKILL_ARCHITECT.md  SKILL_BA.md  SKILL_BACKEND.md  SKILL_FRONTEND.md  SKILL_PM.md  SKILL_UIUX.md  TUI_DEMO.md  WEBSOCKET_TEST_GUIDE.md  docker-compose.yml  test_tui.sh
.claude/: settings.local.json
datasets/fine_tuning/: code_examples.jsonl  qa_examples.jsonl  shell_commands.jsonl
docs/: ai_agent_architecture.md
notebooks/fine_tuning/: README.md
scripts/fine_tuning/: validate_dataset.py
src/: chat_ui.rs  llama_interface.rs  main.rs  pdf_reader.rs  shell_runner.rs  ws_messages.rs  ws_server.rs
